--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
 		rel="stylesheet" />
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/style.css?version=1.2" />
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
